Fix IntranetRedirectDetector DCHECK in test

ExistingUserControllerTest uses SuccessFetcher to simulate
URL request success. However, SuccessFetcher::Start calls
delegate's OnURLFetchComplete synchrounously and breaks the
assumption in IntranetRedirectDetector that URLFetcher::Start
is asynchronous. This CL makes SuccessFetcher::Start calls
OnURLFetchComplete via a PostTask to fix the DCHECK in
IntranetRedirectDetector.

Bug: 796636
Change-Id: I984833c424eab84042a0ee418ba39623119dc822
Reviewed-on: https://chromium-review.googlesource.com/840449
Reviewed-by: Toni Barzic <tbarzic@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#525766}
Former-commit-id: a0e349ce457ec6988857c30f044769a20a870c16